# Saiga

./: .gitignore  LINUX_ADAPTATION_SUMMARY.md  README.md  benchmarking.csv  get_start.ipynb  main.py  pipeline.ipynb  pipeline_2.ipynb  pyproject.toml  test.ipynb
benchmarking/: becnhmark_collection_automation.ipynb  benchmarking.csv
readme_content/: PIPELINE.md  VISUALIZATION_GUIDE.md
src/: config.py  model.py
src/main/python/benchmarking/: becnhmark_collection_automation.ipynb  benchmarking_with_predictions.csv
src/main/python/image_slicer/: image_slicer.py  visualize_slicing.py
src/main/python/iou_filter/: iou_filter.py
src/main/python/model/: yolo.py
src/main/python/tools/: image_slicer.py  iou_filter.py  model.py  outlier_filter.py  visualize_slicing.py
src/main/python/utils/: visualization.py
src/main/resources/: application.yml  config.py
src/test/: 2025_08_05_PhotoRieboR4_g201b201078_f003_093.json  2025_08_05_PhotoRieboR4_g201b201078_f003_094.json  get_start.ipynb
src/test/deploy/: Dockerfile  deploy.ipynb
src/test/deploy/model/: inference.py  requirements.txt
src/test/python/benchmarking/: benchmarking.json  benchmarking_with_predictions.csv  benchmarking_with_predictions_iou_mae.csv
src/test/python/image_slicer/: image_slicer.py
src/test/python/iou_filter/: iou_filter.py
src/test/python/model/: yolo.py
src/test/python/outlier_filter/: outlier_filter.py
src/test/resources/: config.py
src/tools/: image_slicer.py  iou_filter.py  outlier_filter.py  utils.py
training/results/train4/: args.yaml  results.csv
(+2 files in other folders)
