[project]
name = "saiga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.0.dev20250901+cu129",
    "torchaudio==2.8.0.dev20250901+cu129",
    "torchvision==0.24.0.dev20250901+cu129",
    "ultralytics",
    "ipykernel",
    "pandas",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cu129"
default = false

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
